--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Pagina web html</title>
 </head>
 <body>
-    <h1>Mi pagina 2 web html</h1>
+    <h1>Mi pagina web html</h1>
     <ul>
         <li><a href="index.html">Inicio</a>  </li>
         <li><a href="pagina1.html">pagina 1</a>  </li>
