Subida para luego subir a remoto

--- a/pagina1.html
+++ b/pagina1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Pagina web html</title>
+    <title>Pagina web html 3 </title>
 </head>
 <body>
     <h1>Pagina 1</h1>
